--- a/index.html
+++ b/index.html
@@ -32,6 +32,39 @@
             </div>
         </div>
       </section>
+     <section class="section">
+      <div class="container">
+        <div class="picture__header">
+          <h2 class="picture__header-title">How Dreamshare works?</h2>
+        </div>
+        <div class="picture__group">
+          <div class="picture-img">
+            <img src="./imgs/picture1.png" alt="img">
+            <div class="picture-info">
+              <button class="picture-btn">STEP 1</button>
+              <h1 class="picture__info-title">Sed leo enim, condimentum</h1>
+              <p class="picture__info-text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+            </div>
+          </div>
+          <div class="picture-img">
+            <img src="./imgs/pucture2.png" alt="img">
+            <div class="picture-info">
+              <button class="picture-btn">STEP 2</button>
+              <h1 class="picture__info-title">Morbi velit risus</h1>
+              <p class="picture__info-text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+            </div>
+          </div>
+          <div class="picture-img">
+            <img src="./imgs/picture3.png" alt="img">
+            <div class="picture-info">
+              <button class="picture-btn">STEP 3</button>
+              <h1 class="picture__info-title">Sed leo enim, condimentum</h1>
+              <p class="picture__info-text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
     </div>
   </body>
 </html>
