--- a/index.html
+++ b/index.html
@@ -65,6 +65,53 @@
         </div>
       </div>
      </section>
+     <section class="biograhpy">
+  <div class="container">
+    <div class="biograhpy__header">
+      <h1 class="biograhpy__header-title">
+        Meet a partner for your best holiday
+      </h1>
+    </div>
+    <div class="biograhpy-block">
+      <div class="biograhpy-group">
+        <img src="./imgs/Avatar1.png" alt="img" />
+        <div class="biograhpy__info">
+          <h2 class="biograhpy__info-title">Bradley Hunter</h2>
+          <p class="biograhpy__info-text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+      </div>
+      <div class="biograhpy-group">
+        <img src="./imgs/Avatar2.png" alt="img" />
+        <div class="biograhpy__info">
+          <h2 class="biograhpy__info-title">Bradley Hunter</h2>
+          <p class="biograhpy__info-text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+      </div>
+      <div class="biograhpy-group">
+        <img src="./imgs/Avatar3.png" alt="img" />
+        <div class="biograhpy__info">
+          <h2 class="biograhpy__info-title">Bradley Hunter</h2>
+          <p class="biograhpy__info-text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+      </div>
+      <div class="biograhpy-group">
+        <img src="./imgs/Avatar4.png" alt="img" />
+        <div class="biograhpy__info">
+          <h2 class="biograhpy__info-title">Bradley Hunter</h2>
+          <p class="biograhpy__info-text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
     </div>
   </body>
 </html>
