--- a/index.html
+++ b/index.html
@@ -110,8 +110,50 @@
         </div>
       </div>
     </div>
+    <div class="biography-footer">
+      <button class="biography-footer-btn">See other partners</button>
+    </div>
+  </div>
+</section>
+<section class="section">
+  <div class="container">
+    <div class="img-header">
+      <h1 class="img-header-title">Discover holiday activity ideas</h1>
+    </div>
+    <div class="img-block">
+      <div class="img-group">
+        <img src="./imgs/img1.png" alt="img">
+        <p class="img-group-text">Sports and Activis </p>
+      </div>
+       <div class="img-group2">
+        <img src="./imgs/img2.png" alt="img">
+        <p class="img-group-text">Wellness and Health</p>
+      </div>
+       <div class="img-group3">
+        <img src="./imgs/img3.png" alt="img">
+        <p class="img-group-text">Extreme Sports
+and Expeditions </p>
+      </div>
+       <div class="img-group4">
+        <img src="./imgs/img4.png" alt="img">
+        <p class="img-group-text">Games </p>
+      </div>
+       <div class="img-group5">
+        <img src="./imgs/img5.png" alt="img">
+        <p class="img-group-text">Culture and Education </p>
+      </div>
+       <div class="img-group6">
+        <img src="./imgs/img6.png" alt="img">
+        <p class="img-group-text">Enjomet and Relaxation </p>
+      </div>
+       <div class="img-group7">
+        <img src="./imgs/img7.png" alt="img">
+        <p class="img-group-text">Trevelling </p>
+      </div>
+    </div>
   </div>
 </section>
     </div>
   </body>
 </html>
+
